# clip-guided-diffusion

./:  colab_clip_guided_diff_hq.ipynb  .gitignore  .gitmodules  CLAUDE.md  CLIP_Guided_Diffusion_HQ.ipynb  CLIP_Guided_Diffusion_HQ_init_image.ipynb  LICENSE  README.md  batch_clip_guided_diffusion.ipynb  batch_gen.sh  cgd.ipynb  cgd.py  cgd_clip_selected_class.ipynb  cgd_util.py  clip_guided_diffusion.py  cog.yaml  cog_predict.py  colab_clip_guided_diff_hq.ipynb  download_weights.sh  hq.py  pyproject.toml  requirements.txt  setup.py  setup.sh  test.py  torch_util.py  util.py
.cog/cog/: cog.yaml
cgd/: __init__.py  cgd.py  clip_util.py  losses.py  modules.py  script_util.py  util.py
cgd/ResizeRight/: LICENSE  __init__.py  resize_right.py
cog/: cog_predict.py
data/: diffusion_model_flags.py  imagenet1000_clsidx_to_labels.json  imagenet1000_clsidx_to_labels.py
images/: README.md
scripts/: batch_gen.sh  run.sh
