[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cgd-pytorch"
version = "0.2.5"
description = "CLIP Guided Diffusion"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Katherine Crowson" },
    { name = "Clay Mullis" },
]
keywords = [
    "text to image",
    "openai clip",
    "guided diffusion",
    "image processing",
    "pytorch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision",
    "kornia",
    "tqdm",
    "clip-anytorch",
    "requests",
    "lpips",
    "wandb",
    "guided-diffusion @ git+https://github.com/crowsonkb/guided-diffusion.git",
]

[project.scripts]
cgd = "cgd.cgd:main"

[project.urls]
Homepage = "https://github.com/afiaka87/clip-guided-diffusion"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["cgd", "data"]
